[project]
name = "ComfyUI-KEEP"
description = "Kalman-Inspired Feature Propagation for Video Face Super-Resolution"
version = "1.1.1"
license = {file = "LICENSE"}
dependencies = ["addict", "future", "lmdb", "numpy", "opencv-python", "Pillow", "pyyaml", "scikit-image", "scipy", "torch", "torchvision", "tqdm", "yapf", "ffmpeg-python"]

[project.urls]
Repository = "https://github.com/wildminder/ComfyUI-KEEP"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "wildai"
DisplayName = "ComfyUI-KEEP"
Icon = ""
